@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project name="joverseerRelease" default="BuildAll" basedir=".">
-	<description>
-		Build file for the release parts of joverseer.
-	</description>
-	<property name="updater.dir">../joverseerupdaterjar/dist/lib</property>
+    <description>
+        Build file for the release parts of joverseer.
+    	Tested with Launch4j v3.14
+    </description>
+    <property name="updater.dir">../joverseerupdaterjar/dist/lib</property>
+
 	<property name="jojar.project.dir">../joverseerjar/</property>
 	<property name="bin">bin</property>
 	<property name="src">src</property>
@@ -14,21 +16,27 @@
 	<property name="updater.jar">../joverseerupdaterjar/dist/lib/update.jar</property>
 	<property name="res.dir">${jojar.project.dir}resources</property>
 	<property name="compat.rt.jar">${shared.lib}/compat-1.8-rt.jar</property>
+	<property name="jdk9">c:\Program Files\Eclipse Adoptium\jdk-11.0.16.8-hotspot\</property>
+	<property name="jpackager9">javapackager.exe</property>
+	<property name="custom-runtime">custom-runtime</property>
 
 	<property name="launch4j.dir" location="../launch4j" />
 	<!-- /beans/bean[@id='applicationDescriptor']/property[@name='version'].@value -->
 
-	<macrodef name="assertLaunch4jAvailable">
-		<attribute name="dir" />
-		<sequential>
-			<fail message="Install launch4j in directory '@{dir}'">
-				<condition>
-					<not>
-						<available file="@{dir}" type="dir" />
-					</not>
-				</condition>
-			</fail>
-		</sequential>
+	<available file="C:\Program Files\Java\jdk11" type="dir"
+	           property="default.j11.present"/>
+	
+    <macrodef name="assertLaunch4jAvailable">
+    	<attribute name="dir" />
+    	<sequential>
+        <fail message="Install launch4j in directory '@{dir}'">
+            <condition>
+                <not>
+                    <available file="@{dir}" type="dir" />
+                </not>
+            </condition>
+        </fail>
+    </sequential>
 	</macrodef>
 
 	<taskdef name="launch4j"
@@ -188,37 +196,8 @@
 				prefix="bin/metadata/orderchecker"/> -->
 		</zip>
 	</target>
-	<target name="windowsCompleteZip"
-		depends="GatherDependents,WindowsJoverseerLauncher,WindowsUpdaterLauncher,WindowsIcon">
-		<copy tofile="${dist}\jide-common.jar"
-			file="${dist}\jide-common-windows.jar" overwrite="true" />
-		<loadfile property="joverseer.version"
-			srcFile="${dist}/version" />
-		<zip destfile="${dist}/joverseer-${joverseer.version}.zip">
-			<fileset file="${dist}/joverseer.jar" />
-			<fileset file="${dist}/jOverseerUpdater.exe" />
-			<fileset file="${dist}/jOverseer.exe" />
-			<fileset file="${dist}/orderchecker.jar" />
-			<fileset file="${dist}/txt2xml.jar" />
-			<fileset file="${dist}/jide-common.jar" />
-			<fileset file="${dist}/update.jar" />	<!-- needed at top too -->
-			<zipfileset dir="${dist}" includes="update.jar"
-				prefix="update" />
-			<fileset file="${src}/joverseer.bat" />
-			<fileset file="${dist}/log4j.properties" />
-			<fileset dir="${dist}"
-				includes="swing*.jar,spring*.jar,skin*.jar,PDF*.jar,lo*.jar,junit*.jar,fo*.jar,commons*.jar" />
-			<fileset dir="${dist}"
-				includes="jide-action.jar, jide-beaninfo.jar,jide-components,jide-dialogs.jar,jide-dock.jar,jide-grids.jar" />
-			<fileset file="${dist}/joverseer.ico" />
-			<zipfileset dir="${dist}/../MailSender"
-				includes="MailSender.exe" prefix="bin" />
-			<zipfileset dir="${dist}" includes="default.layout"
-				prefix="layout" />
-		</zip>
-	</target>
-	<target name="windowsInstaller"
-		depends="GatherDependents,WindowsJoverseerLauncher,WindowsUpdaterLauncher,WindowsIcon">
+
+	<target name="windowsInstaller" depends="GatherDependents,WindowsJoverseerLauncher,WindowsUpdaterLauncher,WindowsIcon,customJRE">
 		<property name="iss.dir">C:\Program Files (x86)\Inno Setup 5</property>
 		<copy tofile="${dist}\jide-common.jar"
 			file="${dist}\jide-common-windows.jar" overwrite="true" />
@@ -231,11 +210,69 @@
 			<arg value="${dist}\joverseer.iss.out" />
 		</exec>
 	</target>
+	<!-- note java 8 doesn't support -native option, so we use java 9+ -->
+	<target name="jpackager" depends="GatherDependents,WindowsJoverseerLauncher,WindowsUpdaterLauncher,WindowsIcon">
+		<exec executable="jpackage" failonerror="true">
+			<arg value="-deploy"/>
+			<arg value="-native msi"/>
+		</exec>
+	</target>
+	<!-- list the dependents -->
+	<target name="jdeps" depends="GatherDependents">
+		<exec executable="jdeps">
+			<arg value="--list-deps"/>
+			<arg value="--ignore-missing-deps"/>
+			<arg value="-cp"/>
+			<arg value="${dist}/*.jar"/>
+			<arg value="${dist}/joverseer.jar"/>
+		</exec>	
+	</target>
+	<!-- experimental: build a cut-down JRE -->
+	<target name="customJRE" depends="GatherDependents">
+		<delete dir="${custom-runtime}"/>
+		<exec executable="${jdk9}/bin/jlink" failonerror="true">
+			<arg value="--no-header-files"/>
+			<arg value="--no-man-pages"/>
+			<arg value="--compress=2"/>
+			<arg value="--strip-debug"/>
+			<arg value="--add-modules"/>
+			<arg value="java.base,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.naming,java.prefs,java.rmi,java.sql,java.xml,jdk.httpserver"/>
+			<arg value="--output"/>
+			<arg value="${custom-runtime}"/>
+			
+		</exec>
+	</target>
+	<target name="MacOSInstallerJavaPackager" depends="GatherDependents">
+		<echo message="${java.vesion}"/>
+		<echo message="${jpackager9}"/>
+		<exec executable="${jdk9}/bin/${jpackager9}" failonerror="true">
+			<arg value="-deploy"/>
+			<arg value="-native"/>
+			<arg value="pkg"/>
+			<arg value="-outdir"/>
+			<arg value="${dist}/build"/>
+			<arg value="-srcdir"/>
+			<arg value="${dist}"/>
+		</exec>
+	</target>
 	<!-- needs to run on a Mac -->
-	<target name="MacOSInstaller"
-		depends="GatherDependents,JoverseerJar">
-		<!-- universalJavaApplicationStub jOverseer.icns default.layout PkgInfo 
-			Info.pList and the dependents to dist -->
+
+	<target name="MacOSInstallerPackages" depends="MacOSCommonFiles">
+		<exec executable="/usr/local/bin/packagesbuild">
+			<arg value="-v"/>
+			<arg value="${dist}/jOverseer.pkgproj"/>
+		</exec>
+		<copy tofile="${dist}/build/joverseer-${joverseer.version}.pkg" file="${dist}/build/joverseer.pkg" overwrite="true"/>
+	</target>
+	<target name="MacOSCommonFiles" depends="GatherDependents,JoverseerJar">
+	<!-- universalJavaApplicationStub
+		jOverseer.icns
+		default.layout
+		PkgInfo
+		Info.pList
+		and the dependents to dist
+	-->
+
 		<copy todir="${dist}" flatten="true">
 			<fileset dir="${src}/MacOS" />
 		</copy>
@@ -281,12 +318,6 @@
 		<copy todir="${dist}/update/update">
 			<fileset file="${dist}/update.jar" />
 		</copy>
-		<exec executable="/usr/local/bin/packagesbuild">
-			<arg value="-v" />
-			<arg value="${dist}/jOverseer.pkgproj" />
-		</exec>
-		<copy tofile="${dist}/build/joverseer-${joverseer.version}.pkg"
-			file="${dist}/build/joverseer.pkg" overwrite="true" />
 	</target>
 	<target name="betaupdatezip"
 		depends="WindowsJoverseerLauncher,WindowsUpdaterLauncher">
